@startuml
'https://plantuml.com/class-diagram

 class Game
 {

 }

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(FlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}
abstract class AbstractAircraft
{
	# axHp:int
    # hp:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + increaseHp(int increase):void
    + decreaseHp(int decrease):void
    + getHp():int
    + {abstract} shoot():List<Bullet>
 }

abstract class AbstractEnemy
{
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + {abstract} shoot():List<Bullet>
}

AbstractFlyingObject <|-- AbstractAircraft

AbstractEnemy <|-- MobEnemy
AbstractEnemy <|-- EliteEnemy
AbstractEnemy <|-- BossEnemy
AbstractAircraft <|-- AbstractEnemy

EnemyBullet <-up- AbstractEnemy

EnemyBullet <-up- MobEnemy
EnemyBullet <-up- EliteEnemy
EnemyBullet <-up- BossEnemy

EnemyFactory <|.. MobEnemyFactory
EnemyFactory <|.. EliteEnemyFactory
EnemyFactory <|.. BossEnemyFactory

MobEnemy <.up. MobEnemyFactory
EliteEnemy <.up. EliteEnemyFactory
BossEnemy <.up. BossEnemyFactory

AbstractEnemy <.up. Game
EnemyFactory <.up. Game

interface EnemyFactory
{
    +createEnemy():AbstractEnemy
}

class MobEnemyFactory
{
    +createEnemy():AbstractEnemy
}

class EliteEnemyFactory
{
    +createEnemy():AbstractEnemy
}

class BossEnemyFactory
{
    +createEnemy():AbstractEnemy
}

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
}

class EliteEnemy {
    - power:int
    - direction:int
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
}

class BossEnemy {
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + shoot():List<BaseBullet>
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

@enduml